--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nagarajurongali.github.io/ipfitness/",
+  "homepage": "https://nagarajurongali.github.io/ipfitness",
   "name": "fitness",
   "version": "0.1.0",
   "private": true,
